5d (0.6.5) unstable; urgency=low

  * add '∃, '∀ to "List" module.
  * add 'natural? to "Arithmetic" module.
  * add special-case for shebang to "Scanner" module.
  * fix bug in Int -> Integer conversion.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Wed, 13 Jun 2012 19:15:00 +0200

5d (0.6.4) unstable; urgency=low

  * add "Maybe" module.
  * GTK LATEX bridge: make sure document is kept until it was actually used.
  * add "import" macro (import [a b c d] from (requireModule "X") in ...).
  * add floor, ceil, div0, mod0, divmod0, div, mod, nan?, infinite?, finite? to "Arithmetic".
  * make doublequote be a standalone operator.
  * make (%) synonym for "mod", not "mod0".

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Fri, 11 May 2012 15:08:00 +0200

5d (0.6.3) unstable; urgency=low

  * rename 'ground to 'floor in module "Arithmetic".
  * rename 'while! to 'skipWhile! in module "IO".
  * rename 'until! to 'skipUntil! in module "IO".
  * fix strFromList [] to return [].
  * fix formatting of negative numbers (i.e. [2 (-2)])
  * handle invalid UTF-8 in str (when it's not a text string but a byte string, that's useful).
  * support "void" return value in FFI.
  * disable C-prototype style FFI for UNIX.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Fri, 20 Apr 2012 23:12:00 +0200

5d (0.6.2) unstable; urgency=low

  * add pairs.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sun, 15 Apr 2012 20:39:00 +0200

5d (0.6.1) unstable; urgency=low

  * add 'while!, 'until!
  * add tuples (simple version).
  * handle [*\s 1] in parser.
  * add "#exports" to module "Composition".

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sun, 08 Apr 2012 23:13:00 +0200

5d (0.6.0) unstable; urgency=low

  * extract REPL into its own module
  * remove import, define, defrec and def macros.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Thu, 05 Apr 2012 10:03:00 +0200

5d (0.5.2) unstable; urgency=low
