@@ -2,10 +2,9 @@ let List := requireModule "List" in
 let Error := requireModule "Error" in 
 let Composition := requireModule "Composition" in
 let Logic := requireModule "Logic" in 
-import [rec (|) ($)] from Composition in 
+import [rec (|) ($) rem] from Composition in 
 import [head tail] from List in 
 import [if else] from Logic in 
-import [flush! stderr stdin stdout readline! write! errno!] from Builtins in 
 let ioValue := (\m head m) in 
 let ioWorld := (\m head (tail m)) in 
 let (;) := (\m \ber \world (\r ber (ioValue r) (ioWorld r)) (m world)) in
@@ -38,4 +37,14 @@ let accumrUntil! := (\condition \connector \terminator \body rec\accum!
 			let value2 := ioValue t in 
 			liftIO! (connector value value2) (ioWorld t)
 ) in 
-(requireModule "Composition").dispatch1 (#exports[ioValue ioWorld liftIO! return! flush! stderr stdin stdout readline! (;) write! errno! skipUntil! skipWhile! accumrUntil!])
+let defer! := \finalizer \body 
+	rem "Following tradition, this ignores the result of the finalizer."
+	\world
+		let result := body world in 
+		let value := ioValue result in 
+		let world2 := ioWorld result in 
+		let result2 := finalizer world2 in 
+		let world3 := ioWorld result2 in 
+		liftIO! (value world3)
+in 
+(requireModule "Composition").dispatch1 (#exports[ioValue ioWorld liftIO! return! (;) skipUntil! skipWhile! accumrUntil! defer!])
