@@ -8,7 +8,7 @@ import [if else elif] from Logic in
 import [divmod0 (/=) (+) (-) (*) (<) (=)] from Arithmetic in 
 import [($) rec (|)] from Composition in 
 import [head tail nil? foldr map drop (++) reverse foldl] from List in 
-import [listFromStr str? strFromKeyword strFromList substr] from Builtins in 
+import [listFromStr str? strFromKeyword strFromList] from Builtins in 
 import [(?;) return?] from Maybe in 
 let strcat := \a \b strFromList ((listFromStr a) ++ (listFromStr b)) in 
 let strjoinp := (\sepl \strings 
@@ -46,4 +46,5 @@ let integerFromStrBase :=
 		build base value
 in 
 let integerFromStr := integerFromStrBase 10 in 
+let substr := \beginning \end \box Builtins.substr beginning end box in 
 (requireModule "Composition").dispatch1 (#exports[listFromStr str? strFromKeyword strFromList substr strcat strjoin strFromInteger integerFromStr])
