@@ -28,6 +28,7 @@ hr { color: #808080;
 <li><a href="#math">Module "Arithmetic": Higher Mathematics</a></li>
 <li><a href="#adorning">Module "Composition": Adorning Functions</a></li>
 <li><a href="#ui">Module "UI": User Interface Functions</a></li>
+<li><a href="#string">Module "String": String Functions</a></li>
 </nl>
 <a name="macros"><h2>Macros</h2>
 <h3>' a</h3>
@@ -707,6 +708,12 @@ recordSize "i" =&gt; 4
 <span class="pre">'unknown</span> 
 </p>
 <p>bodyText is the text of the body (a Str)</p>
+
+</a>
+<hr/>
+<a name="#string"><h2>Module "String": String Functions</h2>
+<h3>substr \beginning \end \string</h3>
+<p>Given a String, returns the substring starting at beginning and ending at end.</p>
 
 </a>
 </body>
